# AutoFlipr

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  supervisord.conf  test_scraper.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_image_and_vehicle_detail_columns.py  003_add_listing_comparables_index.py  004_add_price_history.py  005_add_listing_lat_lng.py  006_add_users.py  007_add_user_scans.py  008_listing_reports.py  009_add_performance_indexes.py  010_listing_report_review.py  011_add_lat_lng_index.py  012_add_flipfolio.py  013_add_listing_assistant.py  014_add_listing_output.py  015_add_password_reset.py  015_add_user_watchlist.py  016_add_password_reset.py
backend/autoflipr/: celery_app.py  config.py  email.py  logging_config.py  main.py
backend/autoflipr/api/: deps.py  limiter.py
backend/autoflipr/auth/: email.py  utils.py
backend/autoflipr/db/: models.py  session.py
backend/autoflipr/llm/: direct_extract.py  gemini_client.py  schemas.py  tasks.py
backend/autoflipr/mot/: dvsa.py
backend/autoflipr/scoring/: __init__.py  engine.py
backend/autoflipr/scrapers/: autotrader.py  base.py  facebook.py  gumtree.py
backend/autoflipr/tasks/: mot.py  scan_url.py  schedule.py  score.py  scrape.py
backend/carflip/: celery_app.py  config.py  geo.py  main.py
backend/carflip/api/: deps.py
backend/carflip/auth/: utils.py
backend/tests/: test_auth_utils.py  test_billing.py  test_llm_schemas.py  test_scoring_engine.py  test_scrapers.py
(+88 files in other folders)
