[project]
name = "autoflipr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    # Task queue
    "celery[redis]>=5.4",
    # Config
    "pydantic-settings>=2.3",
    # LLM
    "google-genai>=1.0",
    # Scraping
    "playwright>=1.44",
    "httpx>=0.27",
    "selectolax>=0.3",
    # Utils
    "python-multipart>=0.0.9",
    # Auth
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    # Payments
    "stripe>=10.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Structured logging
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoflipr"]
